# quinny

./: .gitignore  LICENSE  README.md  _pyi_entry.py  install.sh  pyproject.toml  quinny-arm64.spec  quinny.spec
.claude/commands/: quinny.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  VERIFY_LOOP_RESULTS.md  compare.py  compare_loop.py  end_to_end.py  format_ablation.md  format_ablation.py  metrics.py  opus_comparison.md  run-new.sh  run-oauth.sh  run.sh  verify_crosslang.py  verify_determinism.py  verify_formats.py  verify_loop.py  verify_oss_bugs.py  verify_real_oss.py  verify_realworld.py  verify_scale.py  verify_subtle.py  verify_usability.py
benchmarks/fixtures/real_oss/: README.md
benchmarks/fixtures/subtle/: spec.json  spec.qn  suite.py  variants.py
benchmarks/plans/: calculator.qn  cidr.good.qn  cron.good.qn  event_sourced_tasks.qn  event_sourced_tasks.qn.json  fsheet.good.qn  globmatch.good.qn  mini_kv.good.qn  mini_kv.qn  mini_sheet.good.qn  mini_sheet.qn  minilang.good.qn  money.good.qn  semver.good.qn  textkit.good.qn  todo_service.qn  url_shortener.qn
benchmarks/prompts/: calculator.txt  cidr.txt  cron.txt  event_sourced_tasks.txt  fsheet.txt  globmatch.txt  mini_kv.txt  mini_sheet.txt  minilang.txt  money.txt  semver.txt  textkit.txt  todo_service.txt  url_shortener.txt
benchmarks/results/: 20260714T052813Z.json  20260714T053136Z.json  20260714T060729Z.json  20260714T132004Z.json  20260714T134608Z.json  20260714T135340Z.json  20260714T140353Z.json  20260714T143122Z.json  20260714T144755Z.json  20260714T145904Z.json  20260714T151039Z.json  20260714T151508Z.json  20260714T152730Z.json  20260714T233109Z.json  20260715T000106Z.json  20260715T005725Z.json  20260715T064253Z.json  20260715T174554Z.json  20260715T183935Z.json
benchmarks/tests_holdout/: cidr_test.py  cron_test.py  fsheet_test.py  globmatch_test.py  mini_kv_test.py  mini_sheet_test.py  minilang_test.py  money_test.py  semver_test.py  textkit_test.py
docs/: AI_PROMPT.md  LANGUAGE_SPEC.md  ci.md  claude-code.md  getting-started.md
examples/: instagram.qn  login.qn  nested.qn  notify_users.qn
quinny/: __init__.py  _capabilities.py  _interface.py  assemble.py  cli.py  contract.py  generator.py  grammar.lark  graph.py  json_format.py  nodes.py  parser.py  planner.py  scaffold.py  speckit.py  usage.py  verifier.py
quinnybench/: .env.example  .gitignore  PLAN.md  README.md  reproduce.sh  requirements.txt
quinnybench/runner/: rescore.py  run.py  score.py
quinnybench/runner/providers/: __init__.py  anthropic.py  base.py  deepseek.py  google.py  openai.py  openrouter.py  xai.py
quinnybench/tasks/001-shipping-cost/: contract.qn  meta.json  prompt.md  suite.py
quinnybench/tasks/002-luhn-check/: contract.qn  meta.json  prompt.md  suite.py
quinnybench/tasks/003-traffic-light/: contract.qn  meta.json  prompt.md  suite.py
quinnybench/tasks/004-semver-parse/: contract.qn  meta.json  prompt.md  suite.py
quinnybench/tasks/005-flatten-dict/: contract.qn  meta.json  prompt.md  suite.py
quinnybench/tasks/006-business-days/: contract.qn  meta.json  prompt.md  suite.py
quinnybench/tasks/007-lru-cache/: contract.qn  meta.json  prompt.md  suite.py
quinnybench/tasks/019-csv-row/: suite.py  (+3 more)
quinnybench/viz/: build.py  demo.py
scripts/: bench.py  smoke.py
tests/: test_assemble.py  test_bench.py  test_detail_feedback.py  test_generator.py  test_parser.py  test_planner.py  test_speckit.py  test_usage.py  test_verifier.py
(+188 files in other folders)
