[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quinny"
version = "0.2.0"
description = "An executable specification language: verify any implementation against acceptance criteria in a .qn contract."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Weijia Huang" }]
keywords = ["specification", "verification", "acceptance-testing", "contract",
            "dsl", "llm", "ci", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "lark>=1.1.9",
    "networkx>=3.0",
    "rich>=13.0",
    "anthropic>=0.90.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/Xavierhuang/quinny"
Repository = "https://github.com/Xavierhuang/quinny"
Documentation = "https://github.com/Xavierhuang/quinny/blob/main/docs/LANGUAGE_SPEC.md"
Issues = "https://github.com/Xavierhuang/quinny/issues"

[project.scripts]
quinny = "quinny.cli:main"

[tool.pytest.ini_options]
# Only the package's own unit tests. The held-out suites under benchmarks/ are
# run explicitly against generated code (by scripts/bench.py and quinny verify),
# not collected here — they import modules that don't exist at repo root.
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["quinny*"]

[tool.setuptools.package-data]
quinny = ["grammar.lark"]
